# xrandr-gui

./: CMakeLists.txt
src/: main.cpp  main_window.cpp
ui/: main_window.h  ui_xrandr_gui.h  xrandr_gui.ui
